# spikify

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CITATION.cff  LICENSE  README.md  README.rst  README_PYPI.md  RELEASE.rst  animation.py  codecov.yml  codemata.json  codemeta.json  pyproject.toml
.github/workflows/: CODEOWNERS  codeql.yml  publish-distribution  publish-distribution.yaml  python-tests.yaml
docs/: changelog.rst  citation.py  cited_by_list.rst  conf.py  conf2.py  contributing.rst  index.rst  installation.rst  licence.rst  licence_doc.rst  support.rst  tutorial.rst
docs/_static/_css/: furo.css  pydata_sphinx_theme.css  shared.css
docs/api/python/: index.rst
docs/api/python/decoders/: index.rst
docs/api/python/encoders/: index.rst
docs/api/python/encoding/: index.rst
docs/api/python/filtering/: filterbank.rst  index.rst
docs/api/python/filters/: filterbank.rst  index.rst
docs/api/python_api/: index.rst
docs/spikify/encoders/: index.rst
docs/spikify/encoders/rate/: index.rst
docs/spikify/encoding/: encoding.rst  index.rst
docs/spikify/encoding/rate/: index.rst  poisson_rate.rst
docs/spikify/encoding/temporal/: index.rst
docs/spikify/filtering/: filtering.rst  index.rst
docs/spikify/filters/: index.rst
examples/utils/: download_dataset.py
examples/wisdm/: encode.py  wisdm.py
spikify/: __init__.py
spikify/decoders/: __init__.py
spikify/decoders/temporal/contrast/: __init__.py  decoder_algorithm.py
spikify/decoders/temporal/deconvolution/: __init__.py  decoder_algorithm.py
spikify/encoders/: __init__.py
spikify/encoders/rate/: poisson_algorithm.py
spikify/encoders/temporal/contrast/: moving_window_algorithm.py  step_forward_algorithm.py  threshold_based_algorithm.py  zero_cross_step_forward_algorithm.py
spikify/encoders/temporal/deconvolution/: bens_spiker_algorithm.py  hough_spiker_algorithm.py  modified_hough_spiker_algorithm.py
spikify/encoders/temporal/global_referenced/: __init__.py  phase_encoding_algorithm.py  time_to_first_spike_algorithm.py
spikify/encoders/temporal/latency/: burst_coding_algorithm.py
spikify/encoding/rate/: __init__.py  poisson_algorithm.py  poisson_rate_algorithm.py
spikify/encoding/temporal/contrast/: __init__.py  moving_window_algorithm.py  step_forward_algorithm.py  threshold_based_algorithm.py  zero_cross_step_forward_algorithm.py
spikify/encoding/temporal/deconvolution/: __init__.py  ben_spiker_algorithm.py  bens_spiker_algorithm.py  hough_spiker_algorithm.py  modified_hough_spiker_algorithm.py
spikify/encoding/temporal/global_referenced/: __init__.py  phase_encoding_algorithm.py  (+2 more)
spikify/filtering/: filterbank.py
spikify/filters/: __init__.py  filterbank.py
spikify/utils/: __init__.py  spikes_to_events.py
tests/: test_version.py
tests/encoders/rate/: test_poisson.py
tests/encoding/rate/: test_poisson.py  test_poisson_rate.py
tests/encoding/utils/: test_spikes_to_events.py
tests/filtering/: test_filterbank.py
tests/filters/: test_filterbank.py
(+94 files in other folders)
